<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
tools:context=".MainActivity"
android:layout_gravity="center">


<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/move"
    android:id="@+id/textView1"/>

<TableRow
    android:id="@+id/row1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/button1_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="-"></Button>
    <Button
        android:id="@+id/button1_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="-"></Button>
    <Button
        android:id="@+id/button1_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="-"></Button>
    <!-- Add elements/columns in the first row-->

</TableRow>


<TableRow
    android:id="@+id/row2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button2_1"
        android:layout_width="103dp"
        android:layout_height="match_parent"
        android:text="-"></Button>

    <Button
        android:id="@+id/button2_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="-"></Button>

    <Button
        android:id="@+id/button2_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="-"></Button>
    <!-- Add elements/columns in the first row-->

</TableRow>


<TableRow
    android:id="@+id/row3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/button3_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="-"></Button>
    <Button
        android:id="@+id/button3_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="-"></Button>
    <Button
        android:id="@+id/button3_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="-"></Button>
    <!-- Add elements/columns in the first row-->

</TableRow>


<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/result"
    android:id="@+id/textView2" />





<TableRow
    android:id="@+id/row4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Restart"></Button>
</TableRow>

<TableRow
    android:id="@+id/row5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/gamer1"
        android:id="@+id/textView_G1Z"
        android:layout_gravity="top"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="0"
        android:id="@+id/textView_G1"
        android:layout_gravity="top"/>
</TableRow>

<TableRow
    android:id="@+id/row6"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/gamer2"
        android:id="@+id/textView_G2Z"
        android:layout_gravity="top"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="0"
        android:id="@+id/textView_G2"
        android:layout_gravity="top"/>
</TableRow>

<TableRow
    android:id="@+id/row7"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/draw"
        android:id="@+id/textView_RL"
        android:layout_gravity="top"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="0"
        android:id="@+id/textView_R"
        android:layout_gravity="top"/>
</TableRow>


</TableLayout>